<resources>
    <string name="app_name">CALENDARIO DE ENTRENAMIENTO</string>
    <string name="bt_siguiente"> Siguiente </string>
    <string name="bt_anterior"> Anterior </string>
    <string name="nombre_usuario"> Nombre de usuario </string>
    <string name="contraseña"> Contraseña </string>
    <string name="btRegistro"> Registrarse </string>
    <string name="btLogin"> Logearse </string>
    <string name="Logeate"> Logeate </string>
    <string name="Registrate"> Registrate </string>
    <string name="repetirContraseña"> Repetir contraseña </string>
    <string name="entrenador"> Entrenador </string>
    <string name="btGuardar"> Guardar </string>
    <string name="listaUsuarios">Lista de atletas:</string>
    <string name="btBuscar">Buscar</string>
    <string name="agregarEjer">Agregar ejercicio</string>
    <string name="agregarAtleta"> Agregar atleta</string>

</resources>