<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/Registrate"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:text="@string/Registrate"
            android:textSize="30sp"
            style="@style/borde_redondo"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/NombreUsuarioText"
            android:text="@string/nombre_usuario"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:textSize="17sp"
            style="@style/borde_redondo_azul"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/NombreUsuarioMeter"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:ems="10"
            android:inputType="text"
            style="@style/borde_redondo"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/textoContraseña"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:text="@string/contraseña"
            android:textSize="17sp"
            style="@style/borde_redondo_azul"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/meterContra"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:ems="10"
            style="@style/borde_redondo"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/textoContraseña2"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:text="@string/repetirContraseña"
            android:textSize="17sp"
            style="@style/borde_redondo_azul"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/meterContra2"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:ems="10"
            style="@style/borde_redondo"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <CheckBox
            android:id="@+id/esEntrenador"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:text="@string/entrenador"
            android:gravity="center"
            style="@style/borde_redondo_azul"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">            >

            <Button
                android:id="@+id/LoginBoton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btLogin"
                android:textSize="17sp"
                style="@style/borde_redondo_azul"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <Button
                android:id="@+id/Registro"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btRegistro"
                android:textSize="17sp"
                style="@style/borde_redondo_azul"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>